# kafka-shuttle

./: Cargo.toml  Makefile  README.md  docker-compose.yml
.sqlx/: query-e6c775dfde4452d6d4a7e3fea22121560257e64dd35fa3c5507c46e5ca1909c9.json  query-ebf80321d5601c48386dc06b14318e3494754cf2f9753c2baadb49d0386c5e37.json  query-ec4675c4d07dafdc2da27b7f271d834cfb3964cbed2e8aca98c4302eb98e8b3c.json
migrations/: 20240421231234_init.sql
scripts/: kafka.sh
src/: errors.rs  kafka.rs  main.rs  queries.rs  routing.rs  state.rs
tests/: integration_tests.rs
