[package]
name = "kafka-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
futures-channel = "0.3.30"
rdkafka = { version = "0.36.2", features = ["cmake-build", "gssapi-vendored"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-service = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros"] }
thiserror = "1.0.59"
tokio = "1.28.2"
tracing = "0.1.40"

[dev-dependencies]
futures = "0.3.30"
pretty_env_logger = "0.5.0"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.7", features = ["kafka"] }
